gatewayapi/manifest/lattice-test-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lattice-test-01
  labels:
    app: lattice-test-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lattice-test-01
  template:
    metadata:
      labels:
        app: lattice-test-01
    spec:
      containers:
        - image: whchoi98/network-multitool
          imagePullPolicy: Always
          name: lattice-test-01
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: lattice-test-01
spec:
  selector:
    app: lattice-test-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: lattice-test-01
spec:
  parentRefs:
    - name: my-hotel
      sectionName: http
  rules:
    - backendRefs:
        - name: lattice-test-01
          kind: Service
          port: 80
          weight: 10
